Eevee broken Area Light shadows for square and rectange shape #59448

Closed
opened 2018-12-16 09:46:54 +01:00 by Eric Klein · 3 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia RTX 2070

Blender Version
Broken: 2.80, 4488056f3d, blender2.8, 2018-12-16

Eevee Area Light shadows broken for square and rectangle shape. All I did was change shape of the Area Light from Square to Circle and "Bake Indirect Lighting" again. See attach. images.

Area Light shape Circle:
AreaLightCircle.png

Area Light shape Square:
AreaLightSquare.png

Attach file: AreaLightRectangeBroken_c.blend

  1. Open attach file it has Area light Square shape. Same issue happens with Rectangle shape.
  2. Render.
  3. Select the Light object and switch the Area Light to Circle a shape.
  4. Go back to the render settings and click on "Bake Indirect Lighting".
  5. Render.
**System Information** Operating system: Windows 10 Graphics card: Nvidia RTX 2070 **Blender Version** Broken: 2.80, 4488056f3d9, blender2.8, 2018-12-16 Eevee Area Light shadows broken for square and rectangle shape. All I did was change shape of the Area Light from Square to Circle and "Bake Indirect Lighting" again. See attach. images. Area Light shape Circle: ![AreaLightCircle.png](https://archive.blender.org/developer/F5969620/AreaLightCircle.png) Area Light shape Square: ![AreaLightSquare.png](https://archive.blender.org/developer/F5969631/AreaLightSquare.png) Attach file: [AreaLightRectangeBroken_c.blend](https://archive.blender.org/developer/F5969639/AreaLightRectangeBroken_c.blend) 1. Open attach file it has Area light Square shape. Same issue happens with Rectangle shape. 2. Render. 3. Select the Light object and switch the Area Light to Circle a shape. 4. Go back to the render settings and click on "Bake Indirect Lighting". 5. Render.
Author

Added subscriber: @eklein

Added subscriber: @eklein
Clément Foucault was assigned by Sebastian Parborg 2018-12-17 17:28:06 +01:00

This issue was referenced by 3952fd199a

This issue was referenced by 3952fd199ac9285049bb22e3f9bb9aac822030c5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59448
No description provided.