Fix T59448: Eevee broken Area Light shadows for square and rectange shape